# adp-documentation-importer

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
example_docs/bad_example_1/: index_blank_authors.md  index_blank_summary.md  index_blank_title.md  index_blank_uri.md  index_no_authors.md  index_no_front_matter.md  index_no_summary.md  index_no_title.md  index_no_uri.md
example_docs/example_1/: index.md
src/: __init__.py
src/document_importer/: __init__.py  __main__.py  document_manager.py  importer.py  markdown_parser.py  vector_search.py
tests/: __init__.py  test__main__.py  test_document_manager.py  test_importer.py  test_markdown_parser.py  test_vector_search.py
