[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document_importer"
version = "0.0.1"
description="Import markdown documentation from a variety of sources"
authors = [
    { name= "Logan Talbot", email="logan.talbot@capgemini.com"}
]
maintainers = [
    { name= "Logan Talbot", email="logan.talbot@capgemini.com"}
]
readme = {file = "README.txt", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "azure-search-documents",
    "azure-identity",
    "langchain_community",
    "langchain_openai",
    "langchain_text_splitters",
    "icecream",
    "python-dotenv",
    "pytest",
    "python-frontmatter",
    "unstructured",
    "markdown",
    "azure-search-documents",
    "pytest-cov",
    "flake8",
    "mypy",
    "tox",
    "Flake8-pyproject"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]

[project.scripts]
mk-importer = "document_importer.__main__:main"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["document_importer*"]  # ["*"] by default

[tool.pytest.ini_options]
addopts = "--cov=document_importer"

testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 120

[tool.setuptools.package-data]
"document_importer" = ["py.typed"]